--- a/aboutus.html
+++ b/aboutus.html
@@ -3,9 +3,9 @@
 <a href="index.html">⬅ Back to Home</a>
 
 <h1>About the Website</h1>
-<p> My website is a collection of fun and interactive mini-games designed to entertain and challenge users of all ages. Each game offers a unique experience, from word puzzles to trivia quizzes, all aimed at providing a delightful break from the daily grind.</p>
+<p> My website is a collection of fun and interactive mini-games designed to entertain and challenge users of all ages. Each game offers a unique experience, from online soccer to spaceship manoeuvring, all aimed at providing a delightful break from the daily grind.</p>
 <p> The inspiration for this project came from my passion for coding and game development. I wanted to create a platform where I could showcase my skills while also bringing joy to others through engaging gameplay. The idea of combining various mini-games into one cohesive website was particularly appealing, as it allows users to explore different types of games in one place.</p>
-<p> I hope that visitors to my website find the games enjoyable and stimulating. Whether you're looking to test your vocabulary with crosswords, challenge your knowledge with trivia, or simply have fun navigating through a space-themed adventure, there's something for everyone. My goal is to create an inclusive and entertaining environment where users can relax, learn, and have fun.</p>
+<p> I hope that visitors to my website find the games enjoyable and stimulating. Whether you're looking to test your online soccer skills, or simply have fun navigating through a space-themed adventure, there's something for everyone. My goal is to create an inclusive and entertaining environment where users can relax, learn, and have fun.</p>
 <p> Thank you for visiting my website, and I hope you have a fantastic time playing the games!</p>
 
 <p> If you want to know more about me, keep reading!</p>
@@ -13,4 +13,5 @@
 <h2>About the Creator</h2>
 <p> Hello! My name is Avik Gupta, and I am the creator of this mini-game website. I am a passionate coder and game developer with a keen interest in creating interactive experiences that entertain and engage users. My journey into coding began at a young age, and over the years, I have honed my skills in various programming languages and game development frameworks.</p>
 <p> Surprisingly, I once started making this website as a school passion project! It was a way for me to combine my love for coding with my desire to create something fun and engaging for others. As I worked on the project, I realized how much I enjoyed the process of designing and developing games, and I knew I wanted to continue pursuing this path.</p>
+
 
